<resources>
    <string name="app_name">Minha Lista de Compras</string>
    <string name="item_da_lista">Açaí no pote</string>
    <string name="descricao_do_item_da_lista">Preciso comprar açaí em pote urgentemente!!! - Preciso comprar açaí em pote urgentemente!!!</string>
    <string name="data">30/09/1964</string>
    <string name="menu_superior">Menu colapsado superior</string>
    <string name="entre_com_a_sua_conta">Entre com a sua conta:</string>
    <string name="senha">Digite sua senha</string>
    <string name="email">Digite seu email</string>
    <string name="forgot_password">Esqueci minha senha!</string>
    <string name="dont_have_account">Não tem uma conta?</string>
    <string name="cadastre_se_agora">Cadastre-se agora</string>
    <string name="button_login">Login</string>
    <string name="name">Digite seu nome</string>
    <string name="termos_e_condicoes">Li e aceito os termos e condições</string>
    <string name="cadastrar_agora">Cadastrar Agora</string>
    <string name="already_account">Já tem conta? Então, faça o login: </string>
    <string name="email_and_password_incorrects">Email ou Senha vazios</string>
    <string name="loading">Acesso em andamento</string>
    <string name="campos_invalidos">Email ou Senha incorretos</string>
</resources>