<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="6dp"
    tools:showIn="@layout/activity_main"
    app:cardCornerRadius="5dp"
    android:elevation="20dp"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:background="@drawable/bottom_list_item"
        >

        <TextView
        android:id="@+id/tvItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yantramanav_black"
        android:text="@string/item_da_lista"
        android:textColor="@android:color/black"
        android:textSize="@dimen/normal_title"
        app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivMenuMore"
        app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivMenuMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_more"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/menu_superior"
            />

        <TextView
            android:id="@+id/tvDescricao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yantramanav"
            android:text="@string/descricao_do_item_da_lista"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvItem" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yantramanav"
            android:text="@string/data"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescricao"
            />
<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="5dp"-->
<!--            android:background="#ef5350"-->
<!--            app:layout_constraintTop_toBottomOf="@id/tvDate"-->
<!--            />-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>